# json2doc

./: .gitignore  CMakeLists.txt  JSON_MERGE_README.md  MAKEFILE_COMMANDS.md  Makefile  README.md  SUMMARY_DOCX_READER.md  XML_DOCUMENT_README.md  data.json  google_docs_example.docx  iwyu.imp  table_data.json
.github/: CI_README.md
.github/workflows/: ci.yml
doc/: DOCX_READER.md  SUMMARY_JSON_MERGE.md
examples/: CMakeLists.txt  simple_docx_reader.cpp
examples/jsons/: dados.json  employee_data.json  table_data_6000.json
examples/programs/: complete_docx_merge.cpp  test_json_merge_docx.cpp  test_xml_integration.cpp
examples/templates/: google_docs_example_with_table.docx
include/: pugiconfig.hpp  pugixml.hpp
include/json2doc/: args_parser.h  converter.h  docx_reader.h  help.h  json2doc.h  json_merge.h  xml_document.h
program/: example_merge.cpp  main.cpp  simple_merge_example.cpp  test_docx_reader.cpp  test_json_merge_docx.cpp
src/: args_parser.cpp  converter.cpp  docx_reader.cpp  help.cpp  json2doc.cpp  json_merge.cpp  xml_document.cpp
tests/: CMakeLists.txt  test_docx_reader.cpp  test_json2doc.cpp  test_json_merge.cpp  test_xml_document.cpp
